# nfl-pick-em-strategy

./: .gitignore  README.md  cbs_config.template.json  cbs_data.py  explore.py  knapsack.py  monte_carlo.py  pyproject.toml  vegas.py
