[project]
name = "nfl-pickem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.8.0",
    "dask[distributed]>=2025.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
